--- a/src/app/books/book-add/book-add.component.html
+++ b/src/app/books/book-add/book-add.component.html
@@ -1,1 +1,22 @@
-<p>book-add works!</p>
+<h2>Ajout d'un nouveau livre :</h2>
+<!--Solution simplifiée pour la gestion du formulaire (non recommandée!!!)-->
+<form id="addForm" (ngSubmit)="addBook(f)" #f="ngForm"><!--amalet objet qui represente le form-->
+    <div class="mb-3">
+      <label for="title" class="form-label">Titre</label>
+      <input type="text" class="form-control" id="title" #title  ngModel name="title"/><!--rani bsh ncontroloh-->
+    </div>
+    <div class="mb-3">
+      <label for="author" class="form-label">Auteur</label>
+      <input type="text" class="form-control" id="author" #author ngModel name="Auteur"/>
+    </div>
+    <div class="mb-3">
+      <label for="price" class="form-label">Prix</label>
+      <input type="number" class="form-control" id="price" #price ngModel name="Prix"/>
+    </div>
+    <button 
+        type="button" 
+        id="btnValidAdd" 
+        class="btn btn-primary" >
+            Valider
+        </button>
+  </form>
