--- a/src/app/books/book-add/book-add.component.html
+++ b/src/app/books/book-add/book-add.component.html
@@ -2,21 +2,42 @@
 <!--Solution simplifiée pour la gestion du formulaire (non recommandée!!!)-->
 <form id="addForm" (ngSubmit)="addBook(f)" #f="ngForm"><!--amalet objet qui represente le form-->
     <div class="mb-3">
-      <label for="title" class="form-label">Titre</label>
-      <input type="text" class="form-control" id="title" #title  ngModel name="title"/><!--rani bsh ncontroloh-->
+      <label for="title" class="form-label">* Titre</label>
+      <input type="text" class="form-control" id="title" #title="ngModel"  ngModel name="title" required/><!--rani bsh ncontroloh-->
+    <br>
+    @if (title.invalid && title.touched) {
+    <span class="error">
+        ce Champ est obligatoire
+    </span>
+}
     </div>
     <div class="mb-3">
-      <label for="author" class="form-label">Auteur</label>
-      <input type="text" class="form-control" id="author" #author ngModel name="Auteur"/>
+      <label for="author" class="form-label">* Auteur</label>
+      <input type="text" class="form-control" id="author" #author="ngModel" ngModel name="Auteur" required/>
+      <br>
+    @if (author.invalid && author.touched) {
+    <span class="error">
+        ce Champ est obligatoire
+    </span>
+}
     </div>
     <div class="mb-3">
-      <label for="price" class="form-label">Prix</label>
-      <input type="number" class="form-control" id="price" #price ngModel name="Prix"/>
+      <label for="price" class="form-label">* Prix</label>
+      <input type="number" class="form-control" id="price" #price="ngModel" ngModel name="Prix" required/>
+      <br>
+    @if (price.invalid && price.touched) {
+    <span class="error">
+        ce Champ est obligatoire
+    </span>
+}
     </div>
     <button 
         type="button" 
         id="btnValidAdd" 
-        class="btn btn-primary" >
+        class="btn btn-primary" 
+        [disabled]="f.invalid"
+        >
             Valider
-        </button>
+        </button><br><br>
+        <div>* : champ obliga</div>
   </form>
